--- a/src/main/webapp/CreateTeam.css
+++ b/src/main/webapp/CreateTeam.css
@@ -1,4 +1,4 @@
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+body {font-family: "Lato", sans-serif}
 .navbar ,h1,button {font-family: "Montserrat", sans-serif}
 .navbar {
     overflow: hidden;
@@ -60,3 +60,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+h2 {
+	text-align: center;
+}
+
+input[type=text], input[type=email], input[type=password] {
+	 width: 80%;
+    background-color: white;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#tc-form {
+	border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
