--- a/src/main/webapp/ViewTheMoves.css
+++ b/src/main/webapp/ViewTheMoves.css
@@ -124,3 +124,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+h2, {
+	text-align: center;
+}
+
