--- a/src/main/webapp/accountChange.css
+++ b/src/main/webapp/accountChange.css
@@ -93,3 +93,20 @@ tr:nth-child(even) {
 padding-top: 1%;
     text-align: center;
 }
+
+input[type=text], input[type=email], input[type=password] {
+	 width: 80%;
+    background-color: white;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#registration-form {
+	border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
